2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Added feature structures from MMC-4.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	  Added features structures from MMC-3.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* SCSI/MMC/Features.cs:
	* DiscImageChef.Decoders.csproj:
	  Added feature structures from MMC-1.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Solved some bugs found testing on usb flash sticks.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Polished some bugs and typos and format

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding MODE SENSE.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added LongLBA MODE SENSE(10) support.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from MMC-3.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from MMC-2.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from MMC-1 Draft.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from USB Mass Storage Class – UFI Command
	  Specification.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x00: Drive Operation Mode page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from INF-8070.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x1C: Timer & Protect page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented Mode Page 0x1B: Removable Block Access
	  Capabilities page.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from ANSI X3.304-1997 (MMC-1).
